--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
   "author": "Cédric Rochefolle",
   "license": "MIT",
   "dependencies": {
+    "@types/gapi.auth2": "^0.0.51",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2"
