--- a/fe/.eslintrc.json
+++ b/fe/.eslintrc.json
@@ -51,6 +51,10 @@
                         "ts": "never",
                         "tsx": "never"
                     }
+                ],
+                "linebreak-style": [
+                    "error",
+                    "unix"
                 ]
             }
         },
