Implement blog display: - blog content - fix footer CSS

--- a/fe/.eslintrc.json
+++ b/fe/.eslintrc.json
@@ -54,7 +54,7 @@
                 ],
                 "linebreak-style": [
                     "error",
-                    "unix"
+                    "windows"
                 ]
             }
         },
