--- a/fe/package.json
+++ b/fe/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --fix src/**/*.{ts,tsx}",
-    "start": "webpack-dev-server --mode development --open",
+    "start": "webpack-dev-server --mode mock --open",
     "test": "eslint --fix src/**/*.{ts,tsx} && jest",
-    "test:coverage": "eslint --fix src/**/*.{ts,tsx} && jest --coverage",
-    "build": "webpack --mode production",
+    "build:prod": "webpack --mode production",
+    "build:none": "webpack --mode none",
     "dist": "yarn build && 7z a ../jscfebe.zip dist"
   },
   "author": "Cédric Rochefolle",
@@ -20,28 +20,28 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/gapi.auth2": "^0.0.51",
-    "@types/jest": "^25.1.4",
-    "@types/react": "^16.9.31",
-    "@types/react-dom": "^16.9.6",
-    "@types/react-router-dom": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "autoprefixer": "^9.7.5",
+    "@types/jest": "^25.2.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "autoprefixer": "^9.7.6",
     "babel-core": "^6.26.3",
-    "babel-jest": "^25.2.6",
+    "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
@@ -50,20 +50,19 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "2.5.0",
     "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.0.4",
+    "html-webpack-plugin": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.2.6",
+    "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "regenerator-runtime": "^0.13.5",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "ts-jest": "^25.3.0",
+    "style-loader": "^1.2.1",
+    "ts-jest": "^25.5.0",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
