--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: yarn --cwd fe install --silent --no-progress
       - run:
           name: test
-          command: yarn --cwd fe --silent run test:coverage
+          command: yarn --cwd fe --silent run test --coverage
       - run:
           name: codecov
           command: codecov -y ./codecov.yml -f ./fe/coverage/coverage-final.json -F react
@@ -26,7 +26,7 @@ jobs:
           command: yarn --cwd fe install --silent --no-progress
       - run:
           name: build
-          command: yarn --cwd fe build --silent --no-progress
+          command: yarn --cwd fe build:prod --silent --no-progress
   release:
     working_directory: ~/narok
     docker:
