Enable HTTPS only
Add support to use only https for API in production mode.

--- a/fe/src/services/config/config.json
+++ b/fe/src/services/config/config.json
@@ -5,8 +5,8 @@
             "server": "localhost"
         },
         "production": {
-            "port": 9001,
-            "server": "narok.io"
+            "port": 80,
+            "server": "api.narok.io"
         }
     },
     "google": {
