Minor update for modularity

--- a/fe/src/services/config/config.json
+++ b/fe/src/services/config/config.json
@@ -2,10 +2,12 @@
     "api": {
         "development": {
             "port": 9001,
+            "secure": false,
             "server": "localhost"
         },
         "production": {
             "port": 443,
+            "secure": true,
             "server": "api.narok.io"
         }
     },
