--- a/fe/package.json
+++ b/fe/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --fix src/**/*.{ts,tsx}",
-    "start": "webpack-dev-server --mode mock --open",
+    "start": "webpack-dev-server --mode development --open",
     "test": "eslint --fix src/**/*.{ts,tsx} && jest",
     "build:prod": "webpack --mode production",
     "build:none": "webpack --mode none",
