Make typescript test required for release.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ workflows:
       - release:
           requires:
             - typescript
+            - typescript_test
           filters:
             branches:
               only: master
