--- a/be/src/main/resources/application.conf
+++ b/be/src/main/resources/application.conf
@@ -2,3 +2,11 @@ http {
   interface = "0.0.0.0"
   port = 9001
 }
+
+db {
+  host = "jscdb"
+  port = 3306
+  name = "narokio"
+  user = "narokio"
+  password = "narokio"
+}
