--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,28 @@
-version: '3'
+version: '3.1'
 services:
   jscfe:
     image: jscdroiddev/narokio-fe:latest
     ports:
       - "8080:80"
+    depends_on:
+      - jscbe
   jscbe:
     image: jscdroiddev/narokio-be:latest
     ports:
       - "9001:9001"
+    depends_on:
+      - jscdb
+    volumes:
+      - "./conf:/opt/jscbe/conf"
+  jscdb:
+    image: mariadb:latest
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: narokio
+      MYSQL_USER: narokio
+      MYSQL_PASSWORD: narokio
+    volumes:
+      - "./db/data:/var/lib/mysql"
+    expose:
+      - "3306"
