Complete the implementation of inserts. Remaining is update.

--- a/be/src/main/resources/application.conf
+++ b/be/src/main/resources/application.conf
@@ -5,9 +5,8 @@ http {
 }
 
 db {
-  host = "jscdb"
-  port = 3306
-  name = "narokio"
   user = "narokio"
   password = "narokio"
+  url = "jdbc:mysql://jscdb:3306/narokio"
+  driver = "com.mysql.jdbc.Driver"
 }
