--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,13 @@ jobs:
     steps:
       - checkout
       - run:
-          name: install
+          name: Install
           command: yarn --cwd fe install --silent --no-progress
       - run:
-          name: test
+          name: Test
           command: yarn --cwd fe --silent run test --coverage
       - run:
-          name: codecov
+          name: Codecov
           command: codecov -y ./codecov.yml -f ./fe/coverage/coverage-final.json -F react
   typescript:
     working_directory: ~/narok
@@ -22,11 +22,32 @@ jobs:
     steps:
       - checkout
       - run:
-          name: install
+          name: Install
           command: yarn --cwd fe install --silent --no-progress
       - run:
-          name: build
+          name: Build
           command: yarn --cwd fe build:prod --silent --no-progress
+  scala:
+    working_directory: ~/narok
+    docker:
+      - image: jscdroiddev/docker-sbt:latest
+    steps:
+      - checkout
+      - run:
+          name: Build
+          command: cd be && sbt compile
+  scala_test:
+    working_directory: ~/narok
+    docker:
+      - image: jscdroiddev/docker-sbt:latest
+    steps:
+      - checkout
+      - run:
+          name: Test
+          command: cd be && sbt coverage test coverageReport
+      - run:
+          name: Codecov
+          command: codecov -y ./codecov.yml -f ./be/target/scala-2.13/coverage-report/cobertura.xml
   release:
     working_directory: ~/narok
     docker:
@@ -41,12 +62,16 @@ workflows:
   version: 2
   do_it_all:
     jobs:
-      - typescript_test
-      - typescript
-      - release:
+      - typescript_test:
           requires:
             - typescript
+      - scala_test:
+          requires:
+            - scala
+      - release:
+          requires:
             - typescript_test
+            - scala_test
           filters:
             branches:
               only: master
