Fix circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,8 @@ workflows:
   version: 2
   do_it_all:
     jobs:
+      - scala
+      - typescript
       - typescript_test:
           requires:
             - typescript
