--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,32 +10,14 @@ jobs:
           name: Install
           command: yarn --cwd fe install --silent --no-progress
       - run:
+          name: Build
+          command: yarn --cwd fe build:prod --silent --no-progress
+      - run:
           name: Test
           command: yarn --cwd fe --silent run test --coverage
       - run:
           name: Codecov
           command: codecov -y ./codecov.yml -f ./fe/coverage/coverage-final.json -F react
-  typescript:
-    working_directory: ~/narok
-    docker:
-      - image: circleci/node:latest
-    steps:
-      - checkout
-      - run:
-          name: Install
-          command: yarn --cwd fe install --silent --no-progress
-      - run:
-          name: Build
-          command: yarn --cwd fe build:prod --silent --no-progress
-  scala:
-    working_directory: ~/narok
-    docker:
-      - image: jscdroiddev/docker-sbt:latest
-    steps:
-      - checkout
-      - run:
-          name: Build
-          command: cd be && sbt compile
   scala_test:
     working_directory: ~/narok
     docker:
@@ -44,7 +26,7 @@ jobs:
       - checkout
       - run:
           name: Test
-          command: cd be && sbt coverage test coverageReport
+          command: cd be && sbt clean compile coverage test coverageReport
       - run:
           name: Codecov
           command: codecov -y ./codecov.yml -f ./be/target/scala-2.13/coverage-report/cobertura.xml
@@ -62,14 +44,8 @@ workflows:
   version: 2
   do_it_all:
     jobs:
-      - scala
-      - typescript
-      - typescript_test:
-          requires:
-            - typescript
-      - scala_test:
-          requires:
-            - scala
+      - typescript_test
+      - scala_test
       - release:
           requires:
             - typescript_test
