--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,10 @@ jobs:
       - checkout
       - run:
           name: Test
-          command: cd be && sbt clean compile
+          command: cd be && sbt clean compile && ls -al */*/*
       - run:
           name: Test
-          command: cd be && ls -al target/scala-2.13/test-classes && sbt coverage test coverageReport
+          command: cd be && sbt coverage test coverageReport
       - run:
           name: Codecov
           command: codecov -y ./codecov.yml -f ./be/target/scala-2.13/coverage-report/cobertura.xml
