--- a/be/src/main/resources/application.conf
+++ b/be/src/main/resources/application.conf
@@ -1,12 +1,14 @@
-http {
-  interface = "0.0.0.0"
-  port = 9001
-  origin = "http://localhost:8080"
-}
+app {
+  http {
+    interface = "0.0.0.0"
+    port = 9001
+    origin = "http://localhost:8080"
+  }
 
-db {
-  user = "narokio"
-  password = "narokio"
-  url = "jdbc:mysql://localhost:3306/narokio"
-  driver = "com.mysql.jdbc.Driver"
+  db {
+    user = "narokio"
+    password = "narokio"
+    url = "jdbc:mysql://localhost:3306/narokio"
+    driver = "com.mysql.jdbc.Driver"
+}
 }
