--- a/be/src/main/resources/production.conf
+++ b/be/src/main/resources/production.conf
@@ -1,12 +1,14 @@
 include "application.conf"
 
-http {
-  origin = "https://narok.io"
-}
+app {
+  http {
+    origin = "https://narok.io"
+  }
 
-db {
-  user = "narokio"
-  password = "narokio"
-  url = "jdbc:mysql://jscdb:3306/narokio"
-  driver = "com.mysql.jdbc.Driver"
+  db {
+    user = "narokio"
+    password = "narokio"
+    url = "jdbc:mysql://jscdb:3306/narokio"
+    driver = "com.mysql.jdbc.Driver"
+  }
 }
