--- a/be/src/test/resources/test.conf
+++ b/be/src/test/resources/test.conf
@@ -1,5 +1,7 @@
-test {
-  string = "string"
-  number = 1
-  boolean = true
+app {
+  test {
+    string = "string"
+    number = 1
+    boolean = true
+  }
 }
