--- a/be/src/test/resources/test.conf
+++ b/be/src/test/resources/test.conf
@@ -4,4 +4,17 @@ app {
     number = 1
     boolean = true
   }
+
+  http {
+    interface = "0.0.0.0"
+    port = 9999
+    origin = "http://localhost:8080"
+  }
+
+  db {
+    user = "test"
+    password = "test"
+    url = "jdbc:derby:memory:test;create=true"
+    driver = "org.apache.derby.jdbc.EmbeddedDriver"
+  }
 }
