--- a/be/src/test/resources/test.conf
+++ b/be/src/test/resources/test.conf
@@ -14,7 +14,7 @@ app {
   db {
     user = "test"
     password = "test"
-    url = "jdbc:derby:memory:test;create=true"
-    driver = "org.apache.derby.jdbc.EmbeddedDriver"
+    url = "jdbc:derby:test;create=true"
+    driver = ""
   }
 }
