Refactor code for simpler testing.

--- a/be/src/test/resources/test.conf
+++ b/be/src/test/resources/test.conf
@@ -14,7 +14,7 @@ app {
   db {
     user = "test"
     password = "test"
-    url = "jdbc:derby:test;create=true"
+    url = "jdbc:"
     driver = ""
   }
 }
