--- a/be/src/test/resources/test.conf
+++ b/be/src/test/resources/test.conf
@@ -8,13 +8,12 @@ app {
   http {
     interface = "0.0.0.0"
     port = 9999
-    origin = "http://localhost:8080"
+    origin = "test"
   }
 
   db {
     user = "test"
     password = "test"
-    url = "jdbc:"
-    driver = ""
+    url = "test"
   }
 }
