Ensure user is owner of the website.

--- a/be/src/main/resources/application.conf
+++ b/be/src/main/resources/application.conf
@@ -9,5 +9,9 @@ app {
     user = "narokio"
     password = "narokio"
     url = "jdbc:mysql://localhost:3306/narokio"
-}
+  }
+
+  blog {
+    ownerId = "0"
+  }
 }
