--- a/be/src/main/resources/application.conf
+++ b/be/src/main/resources/application.conf
@@ -2,7 +2,7 @@ app {
   http {
     interface = "0.0.0.0"
     port = 9001
-    origin = "http://localhost:8080"
+    origin = "http://dev.narok.io:8080"
   }
 
   db {
@@ -12,6 +12,6 @@ app {
   }
 
   blog {
-    ownerId = "0"
+    ownerId = "123456789"
   }
 }
