--- a/fe/package.json
+++ b/fe/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint --fix src/**/*.{ts,tsx}",
     "start": "webpack-dev-server --mode development --open",
+    "start:none": "webpack-dev-server --mode none",
     "test": "eslint --fix src/**/*.{ts,tsx} && jest",
     "build:prod": "webpack --mode production",
     "build:none": "webpack --mode none",
@@ -19,8 +20,8 @@
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
@@ -28,24 +29,24 @@
     "@babel/preset-typescript": "^7.9.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/gapi.auth2": "^0.0.51",
-    "@types/jest": "^25.2.1",
-    "@types/react": "^16.9.34",
+    "@types/gapi.auth2": "^0.0.52",
+    "@types/jest": "^26.0.5",
+    "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.7",
     "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "autoprefixer": "^9.7.6",
     "babel-core": "^6.26.3",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.5.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "eslint": "^6.8.0",
+    "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -58,10 +59,10 @@
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "regenerator-runtime": "^0.13.5",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
-    "ts-jest": "^25.5.0",
-    "typescript": "^3.8.3",
+    "ts-jest": "^26.1.3",
+    "typescript": "^3.9.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
