--- a/be/src/main/resources/application.conf
+++ b/be/src/main/resources/application.conf
@@ -2,12 +2,16 @@ app {
   http {
     interface = "0.0.0.0"
     port = 9001
-    origin = "http://localhost:8080"
+    origin = "http://dev.narok.io:8080"
   }
 
   db {
     user = "narokio"
     password = "narokio"
     url = "jdbc:mysql://localhost:3306/narokio"
-}
+  }
+
+  blog {
+    ownerId = "123456789"
+  }
 }
