--- a/fe/package.json
+++ b/fe/package.json
@@ -8,6 +8,7 @@
     "start": "webpack-dev-server --mode development --open",
     "start:none": "webpack-dev-server --mode none",
     "test": "eslint --fix src/**/*.{ts,tsx} && jest",
+    "test:cov": "eslint --fix src/**/*.{ts,tsx} && jest --coverage --coverageReport=text",
     "build:prod": "webpack --mode production",
     "build:none": "webpack --mode none",
     "dist": "yarn build && 7z a ../jscfebe.zip dist"
