--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: yarn --cwd fe build:prod --silent --no-progress
       - run:
           name: Test
-          command: NODE_OPTIONS="--max_old_space_size=4096" yarn --cwd fe --silent run test --coverage
+          command: yarn --cwd fe --silent run test --coverage
       - run:
           name: Codecov
           command: codecov -y ./codecov.yml -f ./fe/coverage/coverage-final.json -F react
