--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,11 @@ jobs:
           name: Install
           command: yarn --cwd fe install --silent --no-progress
       - run:
+          name: Test
+          command: yarn --cwd fe --silent run test --coverage -w 1
+      - run:
           name: Build
           command: yarn --cwd fe build:prod --silent --no-progress
-      - run:
-          name: Test
-          command: yarn --cwd fe --silent run test --coverage
       - run:
           name: Codecov
           command: codecov -y ./codecov.yml -f ./fe/coverage/coverage-final.json -F react
