--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           command: yarn --cwd fe build:prod --silent --no-progress
       - run:
           name: Codecov
-          command: codecov -y ./codecov.yml -f ./fe/coverage/coverage-final.json -F react
+          command: codecov -y ./codecov.yml -f ./fe/coverage/coverage-final.json
   scala_test:
     working_directory: ~/narok
     docker:
