--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           command: yarn --cwd fe build:prod --silent --no-progress
       - run:
           name: Codecov
-          command: codecov -y ./codecov.yml -f ./fe/coverage/coverage-final.json
+          command: codecov -y ./codecov.yml -f ./fe/coverage/coverage-final.json -F react
   scala_test:
     working_directory: ~/narok
     docker:
@@ -29,7 +29,7 @@ jobs:
           command: cd be && sbt clean coverage test coverageReport
       - run:
           name: Codecov
-          command: codecov -y ./codecov.yml -f ./be/target/scala-2.13/coverage-report/cobertura.xml
+          command: codecov -y ./codecov.yml -f ./be/target/scala-2.13/coverage-report/cobertura.xml -F scala
   release:
     working_directory: ~/narok
     docker:
