Implement all logic and unit tests.

--- a/be/src/main/resources/application.conf
+++ b/be/src/main/resources/application.conf
@@ -11,7 +11,8 @@ app {
     url = "jdbc:mysql://localhost:3306/narokio"
   }
 
-  blog {
+  auth {
     ownerId = "123456789"
+    clientId = "1043504553067-c3tp3a90ktjt9m8souf3ind2riohn05k.apps.googleusercontent.com"
   }
 }
