--- a/be/src/main/resources/production.conf
+++ b/be/src/main/resources/production.conf
@@ -11,7 +11,8 @@ app {
     url = "jdbc:mysql://jscdb:3306/narokio"
   }
 
-  blog {
-    ownerId = "0"
+  auth {
+    ownerId = "123456789"
+    clientId = "1043504553067-c3tp3a90ktjt9m8souf3ind2riohn05k.apps.googleusercontent.com"
   }
-}
+ }
