--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,16 @@ version: '3.1'
 services:
   jscfe:
     image: jscdroiddev/narokio-fe:latest
+    restart: unless-stopped
     ports:
       - "8080:80"
     depends_on:
       - jscbe
+    volumes:
+      - "./assets:/usr/share/nginx/html/assets"
   jscbe:
     image: jscdroiddev/narokio-be:latest
+    restart: unless-stopped
     ports:
       - "9001:9001"
     depends_on:
