Static content support
Add support for static content, i.e. images that are uploaded.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -25,6 +25,7 @@ services:
       - jscdb
     volumes:
       - "./conf:/opt/jscbe/conf"
+      - "./assets:/opt/jscbe/assets"
   jscdb:
     image: mariadb:latest
     restart: unless-stopped
