--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - jscdb
     volumes:
       - "./conf:/opt/jscbe/conf"
+      - "./assets:/opt/jscbe/assets"
   jscdb:
     image: mariadb:latest
     restart: unless-stopped
